fixat till bgimage och dropdown, igen!

--- a/Views/Guest/GetActivities.cshtml
+++ b/Views/Guest/GetActivities.cshtml
@@ -5,8 +5,7 @@
 }
 
 
-<div class="fluid container-addition">
-
+@*<div class="fluid container-addition">*@<div class="my-div">
     <table class="table">
 
         <tr>
@@ -125,9 +124,6 @@
                 });
 
         }
-
-
-
     </script>
 
 
