--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -11,107 +11,121 @@
 <body>
     <img class="kund" src="http://193.10.202.77/images/kund.jpg" />
     <p style="text-align: right">Kundservice</p>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3" style="background-color:coral; opacity:0.6; width: 100%;">
-            <h1 class="rubrik1">Hotell SeaSharp</h1>
+    @* HÄR INSERTAS BAKGRUNDSIMAGE *@
+    
 
-            <div class="container">
-                @*<a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Hotell SeaSharp</a>*@
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" style="font-weight:bold" asp-area="" asp-controller="Home" asp-action="Index">HEM</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" style="font-weight:bold" asp-area="" asp-controller="Home" asp-action="Index">GÄST</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" style="font-weight:bold" asp-area="" asp-controller="Home" asp-action="Index">RUM</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" style="font-weight:bold" asp-area="" asp-controller="ConferenceRooms" asp-action="Index">KONFERENSRUM</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" style="font-weight:bold" asp-area="" asp-controller="Conferences" asp-action="Index">KONFERENSER</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" style="font-weight:bold" asp-area="" asp-controller="Home" asp-action="Index">RESTAURANG</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" style="font-weight:bold" asp-area="" asp-controller="Home" asp-action="Index">AKTIVITETER</a>
-                        </li>
+        <header>
+            <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3" style="background: rgba(255,127,80,0.6);
+            width: 100%;">
+                <h1 class="rubrik1">Hotell SeaSharp</h1>
 
-                        <style>
-                            .dropdown {
-                                position: relative;
-                                display: inline-block;
-                            }
+                <div class="container">
+                    @*<a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Hotell SeaSharp</a>*@
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                        <ul class="navbar-nav flex-grow-1">
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" style="font-weight:bold" asp-area="" asp-controller="Home" asp-action="Index">HEM</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" style="font-weight:bold" asp-area="" asp-controller="Home" asp-action="Index">GÄST</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" style="font-weight:bold" asp-area="" asp-controller="Home" asp-action="Index">RUM</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" style="font-weight:bold" asp-area="" asp-controller="ConferenceRooms" asp-action="Index">KONFERENSRUM</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" style="font-weight:bold" asp-area="" asp-controller="Conferences" asp-action="Index">KONFERENSER</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" style="font-weight:bold" asp-area="" asp-controller="Home" asp-action="Index">RESTAURANG</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" style="font-weight:bold" asp-area="" asp-controller="Home" asp-action="Index">AKTIVITETER</a>
+                            </li>
 
-                            .dropdown-content {
-                                display: none;
-                                position: absolute;
-                                background-color: #f9f9f9;
-                                min-width: 160px;
-                                box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-                                padding: 12px 16px;
-                                z-index: 1;
-                            }
+                            <style>
+                                .dropdown {
+                                    position: relative;
+                                    display: inline-block;
+                                }
 
-                            .dropdown:hover .dropdown-content {
-                                display: block;
-                            }
-                        </style>
-                        <li class="dropdown nav-item">
-                            <a class="nav-link text-dark" style="font-weight:bold" asp-area="" asp-controller="Home" asp-action="Index">TESTAKTIVITETER</a>
+                                .dropdown-content {
+                                    display: none;
+                                    position: absolute;
+                                    background-color: #f9f9f9;
+                                    min-width: 160px;
+                                    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+                                    padding: 12px 16px;
+                                    z-index: 1;
+                                }
 
-                            @*<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">testAktiviteter</a>*@
-                            <div class="nav-link text-dark dropdown-content">
-                                <a class="dropdown-item" asp-area="" asp-controller="Guest" asp-action="GetActivities">Visa Aktiviteter</a>
-                                <a class="dropdown-item" asp-area="" asp-controller="Guest" asp-action="RestaurantInfo">Restaurant Info</a>
-                                <a class="dropdown-item" asp-area="" asp-controller="Guest" asp-action="#">Mina Bokningar **</a>
-                                <a class="dropdown-item" asp-area="" asp-controller="Guest" asp-action="GetReservations">Reservera bord i restaurangen</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#">Separated link</a>
-                            </div>
-                        </li>
+                                .dropdown:hover .dropdown-content {
+                                    display: block;
+                                }
+                            </style>
+                            <li class="dropdown nav-item">
+                                <a class="nav-link text-dark" style="font-weight:bold" asp-area="" asp-controller="Home" asp-action="Index">TESTAKTIVITETER</a>
 
-                       @*@ @Html.ActionLink("Visa aktiviteter", "GetActivities") @* Skall visa de aktiviteter som finns tillgängliga att boka in sig på 
-                        @Html.ActionLink("Restaurangen", "RestaurantInfo")  Skall ta fram kort information om restaurangen och kanske snabblänk till att boka ett bord 
-                        @Html.ActionLink("Mina Bokningar", null)  Skall visa vy för alla bokningar som finns under gästen, både aktiviteter och bokade bord i restaurang. 
-                        @Html.ActionLink("Reservera bord i restaurangen", "GetReservations")*@
+                                @*<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">testAktiviteter</a>*@
+                                <div class="nav-link text-dark dropdown-content">
+                                    <a class="dropdown-item" asp-area="" asp-controller="Guest" asp-action="GetActivities">Visa Aktiviteter</a>
+                                    <a class="dropdown-item" asp-area="" asp-controller="Guest" asp-action="RestaurantInfo">Restaurant Info</a>
+                                    <a class="dropdown-item" asp-area="" asp-controller="Guest" asp-action="#">Mina Bokningar **</a>
+                                    <a class="dropdown-item" asp-area="" asp-controller="Guest" asp-action="GetReservations">Reservera bord i restaurangen</a>
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item" href="#">Separated link</a>
+                                </div>
+                            </li>
+
+                           @*@ @Html.ActionLink("Visa aktiviteter", "GetActivities") @* Skall visa de aktiviteter som finns tillgängliga att boka in sig på 
+                            @Html.ActionLink("Restaurangen", "RestaurantInfo")  Skall ta fram kort information om restaurangen och kanske snabblänk till att boka ett bord 
+                            @Html.ActionLink("Mina Bokningar", null)  Skall visa vy för alla bokningar som finns under gästen, både aktiviteter och bokade bord i restaurang. 
+                            @Html.ActionLink("Reservera bord i restaurangen", "GetReservations")*@
 
 
 
 
 
 
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" style="font-weight:bold" asp-area="" asp-controller="Login" asp-action="Index">Logga in</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" style="font-weight:bold" asp-area="" asp-controller="Login" asp-action="SignOut">Logga ut</a>
-                        </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" style="font-weight:bold" asp-area="" asp-controller="Login" asp-action="Index">Logga in</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" style="font-weight:bold" asp-area="" asp-controller="Login" asp-action="SignOut">Logga ut</a>
+                            </li>
 
-                    </ul>
+                        </ul>
+                    </div>
                 </div>
-            </div>
-        </nav>
-    </header>
-    <div class="container .bild">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
-    </div>
+            </nav>
+        </header>
+        <div class="container">
+            <main role="main" class="pb-3">
+            
+                    @RenderBody()
+            
+    
+                @*<div style="background-image: url('http://193.10.202.77/images/hotelbilden.jpg');">
+                    @RenderBody()
+                </div>*@
+            </main>
+        </div>
     @*<img class="bild" src="http://193.10.202.77/images/hotelbilden.jpg" width="1400" height="900" align="middle" margin-left="auto" margin-right="auto" />*@
     <footer class="border-top footer text-muted" style="position:fixed; left:0;bottom:0;">
         <div class="container">
             &copy; 2021 - Hotell SeaSharp - <a asp-area="" asp-controller="Home" asp-action="Index">Till första sidan</a>
         </div>
     </footer>
+    
+    
+    
+    
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
