--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -17,7 +17,10 @@ body {
     background-repeat:no-repeat;
     background-size:cover;
     position: relative;
+    background-color: #000;
 }
+
+
 .container-addition {
     color:red;
     border-radius: 15px;
