--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -27,22 +27,13 @@
                             <a class="nav-link text-dark" style="font-weight:bold" asp-area="" asp-controller="Home" asp-action="Index">HEM</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" style="font-weight:bold" asp-area="" asp-controller="Home" asp-action="Index">GÄST</a>
+                            <a class="nav-link text-dark" style="font-weight:bold" href="http://193.10.202.78/GuestWebSite">GÄST</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" style="font-weight:bold" asp-area="" asp-controller="Home" asp-action="Index">RUM</a>
+                            <a class="nav-link text-dark" style="font-weight:bold" href="http://193.10.202.77/KonferensrumSida">KONFERENSER</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" style="font-weight:bold" asp-area="" asp-controller="ConferenceRooms" asp-action="Index">KONFERENSRUM</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" style="font-weight:bold" asp-area="" asp-controller="Conferences" asp-action="Index">KONFERENSER</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" style="font-weight:bold" asp-area="" asp-controller="Home" asp-action="Index">RESTAURANG</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" style="font-weight:bold" asp-area="" asp-controller="Home" asp-action="Index">AKTIVITETER</a>
+                            <a class="nav-link text-dark" style="font-weight:bold" href="http://193.10.202.81/Seasharp">BOKA RUM</a>
                         </li>
 
                         <style>
@@ -90,10 +81,10 @@
 
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" style="font-weight:bold" asp-area="" asp-controller="Login" asp-action="Index">Logga in</a>
+                            <a class="nav-link text-dark" style="font-weight:bold" asp-area="" asp-controller="Admin" asp-action="Index">Logga in</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" style="font-weight:bold" asp-area="" asp-controller="Login" asp-action="SignOut">Logga ut</a>
+                            <a class="nav-link text-dark" style="font-weight:bold" asp-area="" asp-controller="Admin" asp-action="SignOut">Logga ut</a>
                         </li>
 
                     </ul>
