lagt in de olika GUESTactions i DIVs så att det ser bättre ut, klassen som används i DIV är "my-div"

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -42,12 +42,14 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" style="font-weight:bold" asp-area="" asp-controller="Conferences" asp-action="Index">KONFERENSER</a>
                             </li>
-                            <li class="nav-item">
+
+                            @*  BEHÖVS INTE *@
+                            @*<li class="nav-item">
                                 <a class="nav-link text-dark" style="font-weight:bold" asp-area="" asp-controller="Home" asp-action="Index">RESTAURANG</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" style="font-weight:bold" asp-area="" asp-controller="Home" asp-action="Index">AKTIVITETER</a>
-                            </li>
+                            </li>*@
 
                             <style>
                                 .dropdown {
@@ -70,7 +72,7 @@
                                 }
                             </style>
                             <li class="dropdown nav-item">
-                                <a class="nav-link text-dark" style="font-weight:bold" asp-area="" asp-controller="Home" asp-action="Index">TESTAKTIVITETER</a>
+                                <a class="nav-link text-dark" style="font-weight:bold" asp-area="" asp-controller="Home" asp-action="Index">Restaurang & Aktiviteter</a>
 
                                 @*<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">testAktiviteter</a>*@
                                 <div class="nav-link text-dark dropdown-content">
