--- a/Views/RestaurantInfo/Index.cshtml
+++ b/Views/RestaurantInfo/Index.cshtml
@@ -2,6 +2,10 @@
 
 @{
     ViewData["Title"] = "RestaurantInfo";
+    @if (User.IsInRole("ActAdmin") || User.IsInRole("ResAdmin"))
+    {
+        Layout = "~/Views/Shared/_Layout_Admin.cshtml";
+    }
 }
 
 <h1>Index</h1>
@@ -28,27 +32,28 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Open)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Closed)
-            </td>
-            <td>
-                @if (User.Identity.IsAuthenticated)
-                {
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a>
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-                }
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Open)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Closed)
+                </td>
+                <td>
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                        <a asp-action="Details" asp-route-id="@item.Id">Details</a>
+                        <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    }
 
-            </td>
-        </tr>
-}
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
