--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -66,7 +66,7 @@
                                 <a class="dropdown-item" asp-area="" asp-controller="Guest" asp-action="#">Mina Bokningar **</a>
                                 <a class="dropdown-item" asp-area="" asp-controller="Guest" asp-action="GetReservations">Reservera bord i restaurangen</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#">Separated link</a>
+                                <a class="dropdown-item" asp-controller="Admin" asp-action="Index">Logga in som Admin</a>
                             </div>
                         </li>
 
