--- a/Views/Shared/_Layout_Admin.cshtml
+++ b/Views/Shared/_Layout_Admin.cshtml
@@ -28,11 +28,11 @@
                         @if (User.IsInRole("ResAdmin"))
                         {
                             <li class="dropdown nav-item">
-                                <a class="nav-link text-dark" style="font-weight:bold" asp-area="" asp-controller="Home" asp-action="Index">Restaurang</a>
+                                <a class="nav-link text-dark" style="font-weight:bold" asp-area="" asp-controller="Home" asp-action="Index">AdminRestaurang</a>
                                 <div class="nav-link text-dark dropdown-content">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Menus" asp-action="Index">Meny</a>
+                                    <a class="dropdown-item" asp-area="" asp-controller="Menus" asp-action="Index">Meny</a>
                                     <a class="dropdown-item" asp-area="" asp-controller="RestaurantInfo" asp-action="Index">Restaurant Info</a>
-                                    <a class="dropdown-item" asp-area="" asp-controller="Reservations" asp-action="Index">Mina Bokningar **</a>
+                                    <a class="dropdown-item" asp-area="" asp-controller="Reservations" asp-action="Index">Mina Bokningar</a>
                                     <div class="dropdown-divider"></div>
                                     @*<a class="dropdown-item" href="#">Separated link</a>*@
                                 </div>
@@ -46,10 +46,10 @@
                         @if (User.IsInRole("ActAdmin"))
                         {
                             <li class="dropdown nav-item">
-                                <a class="nav-link text-dark" style="font-weight:bold" asp-area="" asp-controller="Home" asp-action="Index">Restaurang</a>
+                                <a class="nav-link text-dark" style="font-weight:bold" asp-area="" asp-controller="Home" asp-action="Index">AdminAktivitet</a>
                                 <div class="nav-link text-dark dropdown-content">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Activities" asp-action="Index">Aktiviteter</a>
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="ActivitityBookings" asp-action="Index">Aktivitetsbokningar</a>
+                                    <a class="dropdown-item" asp-area="" asp-controller="Activities" asp-action="Index">Aktiviteter</a>
+                                    <a class="dropdown-item" asp-area="" asp-controller="ActivitityBookings" asp-action="Index">Aktivitetsbokningar</a>
                                     <div class="dropdown-divider"></div>
                                     @*<a class="dropdown-item" href="#">Separated link</a>*@
                                 </div>
