--- a/Views/Activities/Details.cshtml
+++ b/Views/Activities/Details.cshtml
@@ -2,66 +2,69 @@
 
 @{
     ViewData["Title"] = "Details";
+    Layout = "_Layout_Admin";
 }
+<div class="my-div">
 
-<h1>Details</h1>
+    <h1>Details</h1>
 
-<div>
-    <h4>Activity</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Location)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Location)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Price)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Price)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.StartTime)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.StartTime)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.EndTime)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.EndTime)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
-</div>
-
-<div>
-    <h1>PARTICIPANTS</h1>
-    <hr />
-    <br />
-
-    @foreach (var a in Model.ActivityBookings)
-    {
-        <h3>@Html.DisplayNameFor(x => a.Id)</h3> <br />
-        @Html.DisplayFor(x => a.Id) <br />
-       <h3> @Html.DisplayNameFor(x => a.CustomerName)</h3> <br />
-        @Html.DisplayFor(x => a.CustomerName) <br />
-        <h3>@Html.DisplayNameFor(x => a.NumParticipants)</h3> <br />
-        @Html.DisplayFor(x => a.NumParticipants)<br />
+    <div>
+        <h4>Activity</h4>
         <hr />
-    }
+        <dl class="row">
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Description)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Description)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Location)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Location)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Price)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Price)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.StartTime)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.StartTime)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.EndTime)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.EndTime)
+            </dd>
+        </dl>
+    </div>
+    <div>
+        <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
+        <a asp-action="Index">Back to List</a>
+    </div>
+
+    <div>
+        <h1>PARTICIPANTS</h1>
+        <hr />
+        <br />
+
+        @foreach (var a in Model.ActivityBookings)
+        {
+            <h3>@Html.DisplayNameFor(x => a.Id)</h3> <br />
+            @Html.DisplayFor(x => a.Id) <br />
+            <h3> @Html.DisplayNameFor(x => a.CustomerName)</h3> <br />
+            @Html.DisplayFor(x => a.CustomerName) <br />
+            <h3>@Html.DisplayNameFor(x => a.NumParticipants)</h3> <br />
+            @Html.DisplayFor(x => a.NumParticipants)<br />
+            <hr />
+        }
 
 
+    </div>
 </div>
