--- a/Views/ActivityBookings/Details.cshtml
+++ b/Views/ActivityBookings/Details.cshtml
@@ -2,35 +2,38 @@
 
 @{
     ViewData["Title"] = "Details";
+    Layout = "_Layout_Admin";
 }
+<div class="my-div">
 
-<h1>Details</h1>
+    <h1>Details</h1>
 
-<div>
-    <h4>ActivityBooking</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CustomerName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CustomerName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.NumParticipants)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.NumParticipants)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Activity)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Activity.Id)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <div>
+        <h4>ActivityBooking</h4>
+        <hr />
+        <dl class="row">
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.CustomerName)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.CustomerName)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.NumParticipants)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.NumParticipants)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Activity)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Activity.Id)
+            </dd>
+        </dl>
+    </div>
+    <div>
+        <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
+        <a asp-action="Index">Back to List</a>
+    </div>
 </div>
