--- a/Views/Shared/_Layout_Admin.cshtml
+++ b/Views/Shared/_Layout_Admin.cshtml
@@ -49,7 +49,7 @@
                                 <a class="nav-link text-dark" style="font-weight:bold" asp-area="" asp-controller="Home" asp-action="Index">AdminAktivitet</a>
                                 <div class="nav-link text-dark dropdown-content">
                                     <a class="dropdown-item" asp-area="" asp-controller="Activities" asp-action="Index">Aktiviteter</a>
-                                    <a class="dropdown-item" asp-area="" asp-controller="ActivitityBookings" asp-action="Index">Aktivitetsbokningar</a>
+                                    <a class="dropdown-item" asp-area="" asp-controller="ActivityBookings" asp-action="Index">Aktivitetsbokningar</a>
                                     <div class="dropdown-divider"></div>
                                     @*<a class="dropdown-item" href="#">Separated link</a>*@
                                 </div>
@@ -112,7 +112,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer text-muted" style="position: fixed; left: 0; bottom: 0;">
         <div class="container">
             &copy; 2021 - ResAktWebb - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
