--- a/Views/Activities/Create.cshtml
+++ b/Views/Activities/Create.cshtml
@@ -6,48 +6,46 @@
 }
 <div class="my-div">
 
-    <h1>Create</h1>
-
-    <h4>Activity</h4>
+    <h1>Skapa ny aktivitet</h1>
     <hr />
     <div class="row">
         <div class="col-md-4">
             <form asp-action="Create">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
-                    <label asp-for="Description" class="control-label"></label>
+                    <label asp-for="Description" class="control-label">Beskrivning</label>
                     <input asp-for="Description" class="form-control" />
                     <span asp-validation-for="Description" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Location" class="control-label"></label>
+                    <label asp-for="Location" class="control-label">Plats</label>
                     <input asp-for="Location" class="form-control" />
                     <span asp-validation-for="Location" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Price" class="control-label"></label>
+                    <label asp-for="Price" class="control-label">Pris</label>
                     <input asp-for="Price" class="form-control" />
                     <span asp-validation-for="Price" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="StartTime" class="control-label"></label>
+                    <label asp-for="StartTime" class="control-label">Starttid</label>
                     <input asp-for="StartTime" class="form-control" />
                     <span asp-validation-for="StartTime" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="EndTime" class="control-label"></label>
+                    <label asp-for="EndTime" class="control-label">Sluttid</label>
                     <input asp-for="EndTime" class="form-control" />
                     <span asp-validation-for="EndTime" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <input type="submit" value="Create" class="btn btn-primary" />
+                    <input type="submit" value="Skapa Aktivitet" class="btn btn-primary" />
                 </div>
             </form>
         </div>
     </div>
 
     <div>
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index">Tillbaka till Lista</a>
     </div>
 </div>
 
