--- a/Views/Activities/Delete.cshtml
+++ b/Views/Activities/Delete.cshtml
@@ -6,49 +6,47 @@
 }
 <div class="my-div">
 
-    <h1>Delete</h1>
+    <h1>Ta bort Aktivitet</h1>
 
-    <h3>Are you sure you want to delete this?</h3>
     <div>
-        <h4>Activity</h4>
+        <h4>Aktivitet</h4>
         <hr />
         <dl class="row">
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Description)
+                @*@Html.DisplayNameFor(model => model.Description)*@ Beskrivning
             </dt>
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.Description)
             </dd>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Location)
+                @*@Html.DisplayNameFor(model => model.Location)*@ Plats
             </dt>
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.Location)
             </dd>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Price)
+                @*@Html.DisplayNameFor(model => model.Price)*@ Pris
             </dt>
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.Price)
             </dd>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.StartTime)
+                @*@Html.DisplayNameFor(model => model.StartTime)*@ Starttid
             </dt>
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.StartTime)
             </dd>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.EndTime)
+                @*@Html.DisplayNameFor(model => model.EndTime)*@ Sluttid
             </dt>
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.EndTime)
             </dd>
         </dl>
-
         <form asp-action="Delete">
             <input type="hidden" asp-for="Id" />
-            <input type="submit" value="Delete" class="btn btn-danger" /> |
-            <a asp-action="Index">Back to List</a>
+            <input type="submit" value="Ta bort" class="btn btn-danger" /> |
+            <a asp-action="Index">Tillbaka till lista</a>
         </form>
     </div>
 </div>
