--- a/Views/Activities/Details.cshtml
+++ b/Views/Activities/Details.cshtml
@@ -6,38 +6,37 @@
 }
 <div class="my-div">
 
-    <h1>Details</h1>
-
+    <h1>Detaljer</h1>
     <div>
-        <h4>Activity</h4>
+        <h4>Aktivitet</h4>
         <hr />
         <dl class="row">
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Description)
+                @*@Html.DisplayNameFor(model => model.Description)*@ Beskrivning
             </dt>
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.Description)
             </dd>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Location)
+                @*@Html.DisplayNameFor(model => model.Location)*@ Plats
             </dt>
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.Location)
             </dd>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Price)
+                @*@Html.DisplayNameFor(model => model.Price)*@ Pris
             </dt>
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.Price)
             </dd>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.StartTime)
+                @*@Html.DisplayNameFor(model => model.StartTime)*@ Starttid
             </dt>
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.StartTime)
             </dd>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.EndTime)
+                @*@Html.DisplayNameFor(model => model.EndTime)*@ Sluttid
             </dt>
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.EndTime)
@@ -45,26 +44,37 @@
         </dl>
     </div>
     <div>
-        <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Edit" asp-route-id="@Model.Id">Redigera</a> |
+        <a asp-action="Index">Tillbaka till lista</a>
     </div>
 
     <div>
-        <h1>PARTICIPANTS</h1>
+        <h1>Deltagare</h1>
         <hr />
         <br />
-
-        @foreach (var a in Model.ActivityBookings)
-        {
-            <h3>@Html.DisplayNameFor(x => a.Id)</h3> <br />
-            @Html.DisplayFor(x => a.Id) <br />
-            <h3> @Html.DisplayNameFor(x => a.CustomerName)</h3> <br />
-            @Html.DisplayFor(x => a.CustomerName) <br />
-            <h3>@Html.DisplayNameFor(x => a.NumParticipants)</h3> <br />
-            @Html.DisplayFor(x => a.NumParticipants)<br />
-            <hr />
-        }
-
-
+            @foreach (var a in Model.ActivityBookings)
+            {
+                <dl class="row">
+                    <dt class="col-sm-2">
+                            @*@Html.DisplayNameFor(x => a.Id)*@ Id:
+                    </dt>
+                    <dd class="col-sm-10">
+                        @Html.DisplayFor(x => a.Id) 
+                    </dd>
+                    <dt class="col-sm-2">
+                        @*@Html.DisplayNameFor(x => a.CustomerName)*@ Namn:
+                    </dt>
+                    <dd class="col-sm-10">
+                        @Html.DisplayFor(x => a.CustomerName)
+                    </dd>
+                    <dt class="col-sm-2">
+                        @*@Html.DisplayNameFor(x => a.NumParticipants)*@ Antal personer:
+                    </dt>
+                    <dd class="col-sm-10">
+                        @Html.DisplayFor(x => a.NumParticipants)
+                    </dd>
+                </dl>
+                <hr /> <br />
+            }
     </div>
 </div>
