--- a/Views/Activities/Edit.cshtml
+++ b/Views/Activities/Edit.cshtml
@@ -6,68 +6,37 @@
 }
 <div class="my-div">
 
-    <h1>Edit</h1>
+    <h1>Redigera</h1>
     <h1>@Html.DisplayFor(m => m.Description)</h1>
 
-    <h4>Activity</h4>
+    <h4>Aktivitet</h4>
     <hr />
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-4 my-div">
             <form asp-action="Edit">
-                <hr /> START OF TEST <hr />
 
-                <dl class="row">
-                    <dt class=" =" col-sm-2>
-                        @Html.DisplayNameFor(m => m.Description)
-                    </dt>
-                    <dd class="col-sm-10">
-                        @Html.EditorFor(m => m.Description)
-                    </dd>
-                </dl>
+                        @*@Html.DisplayNameFor(m => m.Description)*@ Beskrivning <br />
+                        @Html.EditorFor(m => m.Description) <hr /> <br />
 
-                <dl class="row">
-                    <dt class=" =" col-sm-2>
-                        @Html.DisplayNameFor(m => m.Location)
-                    </dt>
-                    <dd class="col-sm-10">
-                        @Html.EditorFor(m => m.Location)
-                    </dd>
-                </dl>
+                        @*@Html.DisplayNameFor(m => m.Location)*@ Plats <br />
+                        @Html.EditorFor(m => m.Location) <hr /> <br />
 
-                <dl class="row">
-                    <dt class=" =" col-sm-2>
-                        @Html.DisplayNameFor(m => m.Price)
-                    </dt>
-                    <dd class="col-sm-10">
-                        @Html.EditorFor(m => m.Price)
-                    </dd>
-                </dl>
+                        @*@Html.DisplayNameFor(m => m.Price)*@ Pris <br />
+                        @Html.EditorFor(m => m.Price) <hr /> <br />
 
-                <dl class="row">
-                    <dt class=" =" col-sm-2>
-                        @Html.DisplayNameFor(m => m.StartTime)
-                    </dt>
-                    <dd class="col-sm-10">
-                        @Html.EditorFor(m => m.StartTime)
-                    </dd>
-                </dl>
+                        @*@Html.DisplayNameFor(m => m.StartTime)*@ Starttid <br />
+                        @Html.EditorFor(m => m.StartTime) <hr /> <br />
 
-                <dl class="row">
-                    <dt class=" =" col-sm-2>
-                        @Html.DisplayNameFor(m => m.EndTime)
-                    </dt>
-                    <dd class="col-sm-10">
-                        @Html.EditorFor(m => m.EndTime)
-                    </dd>
-                </dl>
+                        @*@Html.DisplayNameFor(m => m.EndTime)*@ Sluttid <br />
+                        @Html.EditorFor(m => m.EndTime) <hr /> <br /> 
 
-                <input type="submit" value="Accept" />
+                <input type="submit" value="OK" />
             </form>
         </div>
     </div>
 
     <div>
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index">Tillbaka till lista</a>
     </div>
 </div>
 
