översatt mer till svenska

--- a/Views/ActivityBookings/Details.cshtml
+++ b/Views/ActivityBookings/Details.cshtml
@@ -6,26 +6,26 @@
 }
 <div class="my-div">
 
-    <h1>Details</h1>
+    <h1>Detaljer</h1>
 
     <div>
-        <h4>ActivityBooking</h4>
+        <h4>Aktivitetsbokning</h4>
         <hr />
         <dl class="row">
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.CustomerName)
+                @*@Html.DisplayNameFor(model => model.CustomerName)*@ Kundnamn
             </dt>
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.CustomerName)
             </dd>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.NumParticipants)
+                @*@Html.DisplayNameFor(model => model.NumParticipants)*@ Antal deltagare
             </dt>
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.NumParticipants)
             </dd>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Activity)
+                @*@Html.DisplayNameFor(model => model.Activity)*@
             </dt>
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.Activity.Id)
@@ -33,7 +33,7 @@
         </dl>
     </div>
     <div>
-        <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Edit" asp-route-id="@Model.Id">Redigera*</a> |
+        <a asp-action="Index">Tillbaka till lista</a>
     </div>
 </div>
