--- a/Views/ActivityBookings/Edit.cshtml
+++ b/Views/ActivityBookings/Edit.cshtml
@@ -6,9 +6,9 @@
 }
 <div class="my-div">
 
-    <h1>Edit</h1>
+    <h1>Redigera</h1>
 
-    <h4>ActivityBooking</h4>
+    <h4>Aktivitetsbokning</h4>
     <hr />
     <div class="row">
         <div class="col-md-4">
@@ -16,17 +16,17 @@
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <input type="hidden" asp-for="Id" />
                 <div class="form-group">
-                    <label asp-for="CustomerName" class="control-label"></label>
+                    <label asp-for="CustomerName" class="control-label">Kundnamn</label>
                     <input asp-for="CustomerName" class="form-control" />
                     <span asp-validation-for="CustomerName" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="NumParticipants" class="control-label"></label>
+                    <label asp-for="NumParticipants" class="control-label">Antal deltagare</label>
                     <input asp-for="NumParticipants" class="form-control" />
                     <span asp-validation-for="NumParticipants" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="ActivityId" class="control-label"></label>
+                    <label asp-for="ActivityId" class="control-label">Aktivitet</label>
                     <select asp-for="ActivityId" class="form-control" asp-items="ViewBag.ActivityId"></select>
                     <span asp-validation-for="ActivityId" class="text-danger"></span>
                 </div>
@@ -38,7 +38,7 @@
     </div>
 
     <div>
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index">Tillbaka till lista</a>
     </div>
 
     @section Scripts {
