--- a/Views/Activities/GetChildren.cshtml
+++ b/Views/Activities/GetChildren.cshtml
@@ -8,7 +8,7 @@
 <h1>GetChildren</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Skapa Ny</a>
 </p>
 <table class="table">
     <thead>
