--- a/Views/Activities/Index.cshtml
+++ b/Views/Activities/Index.cshtml
@@ -12,7 +12,7 @@
     <p>
         @if (User.Identity.IsAuthenticated)
         {
-            <a asp-action="Create">Skapa ny aktivitet</a>
+            <a asp-action="Create" class="btn btn-primary">Skapa ny aktivitet</a>
         }
     </p>
     <table class="table">
