--- a/Views/ActivityBookings/Create.cshtml
+++ b/Views/ActivityBookings/Create.cshtml
@@ -6,37 +6,36 @@
 }
 <div class="my-div">
 
-    <h1>Create</h1>
+    <h1>Skapa ny Aktivitetsbokning</h1>
 
-    <h4>ActivityBooking</h4>
     <hr />
     <div class="row">
         <div class="col-md-4">
             <form asp-action="Create">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
-                    <label asp-for="CustomerName" class="control-label"></label>
+                    <label asp-for="CustomerName" class="control-label">Kundnamn</label>
                     <input asp-for="CustomerName" class="form-control" />
                     <span asp-validation-for="CustomerName" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="NumParticipants" class="control-label"></label>
+                    <label asp-for="NumParticipants" class="control-label">Antal deltagare</label>
                     <input asp-for="NumParticipants" class="form-control" />
                     <span asp-validation-for="NumParticipants" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="ActivityId" class="control-label"></label>
+                    <label asp-for="ActivityId" class="control-label">Aktivitet</label>
                     <select asp-for="ActivityId" class="form-control" asp-items="ViewBag.ActivityId"></select>
                 </div>
                 <div class="form-group">
-                    <input type="submit" value="Create" class="btn btn-primary" />
+                    <input type="submit" value="Skapa bokning" class="btn btn-primary" />
                 </div>
             </form>
         </div>
     </div>
 
     <div>
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index">Tillbaka till lista</a>
     </div>
 
     @section Scripts {
