--- a/Views/ActivityBookings/Delete.cshtml
+++ b/Views/ActivityBookings/Delete.cshtml
@@ -6,9 +6,7 @@
 }
 <div class="my-div">
 
-    <h1>Delete</h1>
-
-    <h3>Are you sure you want to delete this?</h3>
+    <h1>Ta bort</h1>
     <div>
         <h4>ActivityBooking</h4>
         <hr />
@@ -35,8 +33,8 @@
 
         <form asp-action="Delete">
             <input type="hidden" asp-for="Id" />
-            <input type="submit" value="Delete" class="btn btn-danger" /> |
-            <a asp-action="Index">Back to List</a>
+            <input type="submit" value="Ta bort" class="btn btn-danger" /> |
+            <a asp-action="Index">Tillbaka till lista</a>
         </form>
     </div>
 </div>
