--- a/Views/ActivityBookings/Index.cshtml
+++ b/Views/ActivityBookings/Index.cshtml
@@ -8,22 +8,23 @@
 
 <div class="my-div">
 
-    <h1>Index</h1>
+    <h1>Aktiviteter</h1>
 
     <p>
-        <a asp-action="Create">Create New</a>
+            @* Använder klasserna btn och btn-primary för att göra länkarna till snygga knappar istället *@
+            <a asp-action="Create" class="btn btn-primary">Skapa Ny</a>
     </p>
     <table class="table">
         <thead>
             <tr>
                 <th>
-                    @Html.DisplayNameFor(model => model.CustomerName)
+                    @*@Html.DisplayNameFor(model => model.CustomerName)*@ Kundnamn
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.NumParticipants)
+                    @*@Html.DisplayNameFor(model => model.NumParticipants)*@ Antal deltagare
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.Activity)
+                    @*@Html.DisplayNameFor(model => model.Activity)*@ Aktivitet
                 </th>
                 <th></th>
             </tr>
@@ -44,11 +45,10 @@
                     <td>
                         @if (User.Identity.IsAuthenticated)
                         {
-                            <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
-                            <a asp-action="Details" asp-route-id="@item.Id">Details</a>
-                            <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                            <a asp-action="Edit" asp-route-id="@item.Id">Redigera | </a>
+                            <a asp-action="Details" asp-route-id="@item.Id">Detaljer | </a>
+                            <a asp-action="Delete" asp-route-id="@item.Id">Ta bort</a>
                         }
-
                     </td>
                 </tr>
             }
