försökt snygga till gästens bokningsform för aktiviteter

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -24,7 +24,9 @@
 
     @if (!User.Identity.IsAuthenticated)
     {
-        <h3 class="display-3">Welcome guest!</h3>
+        <div class="my-div">
+            <h3 class="display-3">Välkommen!</h3>
+        </div>
 
     }
 
