--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -8,6 +8,13 @@ for details on configuring this project to bundle and minify static web assets. 
     padding: 20px;
     border-radius: 15px;
 }
+.center-div {
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    margin: 10px;
+    
+}
 table {
     border-radius:25px;
 }
@@ -36,7 +43,9 @@ body {
     position:fixed;
     left:35%;
     top:30%;
-    width: 30%;
+    width:auto;
+    max-width:70%;
+    min-width: 30%;
     margin: auto;
     background: rgba(255,127,80,1);
 
