--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -13,11 +13,11 @@
     {
         <div class="jumbotron">
             <h1 class="display-3">@ViewBag.LoginMessage</h1>
-            <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+            @*<p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
             <hr class="my-4">
-            <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+            <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>*@
             <p class="lead">
-                <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+                <a class="btn btn-primary btn-lg" role="button" asp-area="" asp-controller="Admin" asp-action="SignOut">Logga ut</a>
             </p>
         </div>
     }
@@ -25,7 +25,10 @@
     @if (!User.Identity.IsAuthenticated)
     {
         <div class="my-div">
-            <h3 class="display-3">Välkommen!</h3>
+            <h3 class="display-3">Välkommen Gäst!</h3>
+            <p class="lead">Här kan du hitta information om restaurangen och aktiviteter i hotellet.</p>
+            <hr class="my-4">
+            @*<p>It uses utility classes for typography and spacing to space content out within the larger container.</p>*@
         </div>
 
     }
